# PyCIRCLean

./: .gitignore  .travis.yml  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: nosetests.yml
examples/: README.md  generic.py  pier9.py  specific.py
filecheck/: README.md  config.py  filecheck.py
kittengroomer/: __init__.py  helpers.py
playground/: README.md  usb_lookup.py
scripts/: get_chrome_malicious_ext.sh  install.sh  run_filecheck_single_file.py
slides/CIRCLean/: content.tex
slides/PyCIRCLean/: circl-introduction.tex  content.tex
tests/: file_catalog.yaml  filecheck_logging.py  logging.py  oldtests.py  test.py  test_binaries.py  test_examples.py  test_filecheck.py  test_filecheck_logging.py  test_generic.py  test_helpers.py  test_integration.py  test_kittengroomer.py  test_specific_and_pier9.py  testfile_catalog.md  utils.py
tests/dangerous/: autorun.inf
tests/normal/: rar_archive.rar  word_docx.docx
tests/src/: foobar  ntree.wrl
tests/src_complex/: message.msg
tests/src_invalid/: blah.tar.bz2  testRTL‮exe.txt
usbmonitor/: monitoringer.py
