[tool.poetry]
name = "kittengroomer"
version = "2.2.0"
description = "Standalone CIRCLean/KittenGroomer code."
authors = ["Raphaël Vinot <raphael.vinot@circl.lu>"]
license = "BSD-3-Clause"
repository = "https://github.com/CIRCL/PyCIRCLean"

readme = "README.md"

classifiers=[
    'License :: OSI Approved :: BSD License',
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: File Sharing',
    'Topic :: Security',
]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.9.1"
exifread = "^3.0.0"
pillow = "^9.3.0"
olefile = "^0.46"
oletools = "^0.60.1"
python-magic = "^0.4.27"
officedissector = {git = "https://github.com/Rafiot/officedissector.git"}

[tool.poetry.dev-dependencies]
tox = "^4.0.2"
pytest-cov = "^4.0.0"
PyYAML = "^6.0"
mypy = "^0.991"
types-PyYAML = "^6.0.12.2"

[build-system]
requires = ["poetry_core>=1.1", "setuptools"]
build-backend = "poetry.core.masonry.api"
